tests/NormalTests/paczka1/fuzzy1/16265535.err
Error in line 1: S502 S470 94,7
Error in line 18: vSgizVvMv A643 42,3
Error in line 21: vSgizVvMv S502 2,7
Error in line 28: vSgizVvMv S470 56,3
